07/02/2017

Fixed:
	ATV physics and handling issues, low LOD displayed wrong texture


02/02/2017

Fixed:
	MQ-9 Reaper laser designator now precise, propeller correctly turns into blurred one, UAV geometry is visible from gunner view
	Pchela-1T laser designator works properly, squad.xml decals are properly visible, armor and fuel reduced, unlocked unused CDF version


29/01/2017

Fixed:
	appearance of "No owner" messages in RPT file
	armor of body parts of some characters
	portrait picture of some characters


23/01/2017

Fixed:
	laser guidance for MQ-9 Reaper's Hellfire (http://dev.withsix.com/issues/70991)


21/01/2017

Fixed:
	smoke launchers to BMP2_Ambul were not added
	smoke launcher on GAZ_Vodnik_HMG was removed by mistake


22/07/2016

Added:
	some factions and subfactions lack medics and engineers (http://dev.withsix.com/issues/70799)
	new weapons - M4A3_EP1 and M4A3_RCO_EP1 rifles
	possibility to deactivate mines and hide corpses (missed) to saboteurs and some soldiers of special forces
	possibility to switch seat between all seats of UH60M helicopter

Changed:
	reverted and updated CIT #28047 bug fix
	reverted CCP #71037 bug fix to original state
	deleted CCP #71142 bug fix due to it's faulty
	definitions of some optical sights to more realistic
	deleted unnecessary fire mode (@ 2600 SPM) of GSh302K cannon
	external camera rotation angles of tracked vehicles
	hit value of pistol and some cannon projectiles
	inventory picture of OG7 launcher magazine
	max transportable amount of weapons, magazines and backpacks of some vehicles
	portrait picture of TK_Soldier_Crew_EP1 character
	rate of fire of some cannons
	reverted vision modes of Laserdesignator to original
	civilian and non-transport Urals no longer have huge ammo caches in them
	AI should no longer go prone indoors as much

Fixed:
	CfgWeapons - config references missing sound files (http://dev.withsix.com/issues/22990)
	PMC armored SUV's wheels are too strong (http://dev.withsix.com/issues/23501)