@@ -67,7 +67,7 @@ class CfgVehicles
 	class Ins_Soldier_Sab : Ins_Soldier_Base
 	{
 		canDeactivateMines = 1;
-		canHideBodies = 1;
+		//canHideBodies = 1;
 	};
 	/* class Ins_Soldier_Sapper : Ins_Soldier_Base
 	{
@@ -88,7 +88,7 @@ class CfgVehicles
 	class MVD_Soldier_Base : SoldierEB
 	{
 		canDeactivateMines = 1;
-		canHideBodies = 1;
+		//canHideBodies = 1;
 		// engineer = 1;
 	};
 	class RU_Soldier_Base : SoldierEB
@@ -122,7 +122,7 @@ class CfgVehicles
 	class RUS_Soldier_Base : SoldierEB
 	{
 		canDeactivateMines = 1;
-		canHideBodies = 1;
+		//canHideBodies = 1;
 		// engineer = 1;
 
 		class HitPoints : HitPoints
@@ -206,7 +206,7 @@ class CfgVehicles
 	class TK_Special_Forces_EP1 : TK_Soldier_base_EP1
 	{
 		canDeactivateMines = 1;
-		canHideBodies = 1;
+		//canHideBodies = 1;
 		// engineer = 1;
 		portrait = "\Ca\characters_E\data\portraits\loc_soldier_CA";
 
@@ -249,7 +249,7 @@ class CfgVehicles
 	};
 	class GUE_Soldier_Sab : GUE_Soldier_Base
 	{
-		canHideBodies = 1;
+		//canHideBodies = 1;
 	};
 	class GUE_Soldier_Sniper : GUE_Soldier_Base
 	{
@@ -292,7 +292,7 @@ class CfgVehicles
 	class US_Delta_Force_Undercover_Takistani_Base_EP1 : TK_GUE_Soldier_Base_EP1
 	{
 		canDeactivateMines = 1;
-		canHideBodies = 1;
+		//canHideBodies = 1;
 		// engineer = 1;
 	};
 	class UN_CDF_Soldier_base_EP1 : SoldierGB
